# creativity-amplifier

./: .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN_creativity_skill.md  IMPROVEMENTS.md  README.md  blueprint_creativity_amplifier.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  PAPER.md
hooks/: hooks.json  provision.mjs  provision.ps1  provision.sh
skills/ideate/: SKILL.md
skills/ideate/references/: axis_inference.md  (+3 more)
skills/ideate/scripts/: bootstrap.py  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt  setup.sh
skills/ideate/scripts/cambrian_engine/: __init__.py  __main__.py  config.py  diversity.py  embed.py  gap.py  memory.py  novelty.py  pipeline.py  selftest.py  session.py  state.py
skills/ideate/scripts/creativity_engine/: __init__.py  __main__.py  archive.py  config.py  diversity.py  embed.py  memory.py  monitor.py  novelty.py  originality.py  pipeline.py  selftest.py  session.py  state.py
tests/: conftest.py  test_archive_novelty.py  test_ask_policy_schedule.py  test_bootstrap.py  test_config_axes.py  test_discard.py  test_diversity_fallback.py  test_diversity_monitor.py  test_embed.py  test_engine_config.py  test_gap_probe.py  test_init_reset.py  test_mechanism_novelty.py  test_memory.py  test_novelty_reference_cap.py  test_open_nicher_freeze.py  test_pipeline_robustness.py  test_prefilter_guard.py  test_project_lock.py  test_robustness.py  test_selftest_e2e.py  test_state.py  test_state_paths.py  test_state_pruning.py  test_variety_erosion.py
(+5 files in other folders)
