[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cambrian-engine"
version = "0.5.1"
description = "Deterministic diversity engine (MAP-Elites + geometric novelty + DPP + anti-collapse monitor) for the Cambrian skill"
requires-python = ">=3.11"
# Runtime dependencies are pinned in requirements.txt and installed separately so
# requirements.txt stays the single source of truth. setup.sh runs:
#   pip install -r requirements.txt && pip install -e . --no-deps
dependencies = []

[tool.setuptools]
packages = ["cambrian_engine"]
